[package]
name = "starproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1" }
bytes = "1.3.0"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.23.2"
log = "0.4.17"
native-tls = "0.2.11"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.151", features = ["derive"] }

sqlparser = { git = "https://github.com/lovasoa/sqlparser-rs/", rev = "d55be71", features = [
    "derive-visitor",
    "serde",
] }
derive-visitor = "0.3.0"


tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3.0"
tower = { version = "0.4", features = ["make"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
serde_json = "1.0.91"
http-serde = "1.1.2"
reqwest = { version = "0.11.13", features = ["json"] }
flate2 = "1.0.25"
tower-http = { version = "0.3.5", features = [
    "sensitive-headers",
    "decompression-gzip",
    "compression-gzip",
    "trace",
    "add-extension",
    "set-header",
    "timeout",
] }
once_cell = "1.16.0"
cidr-utils = { version = "0.5.10", features = ["serde"] }

trino = { git = "https://github.com/wseaton/trino-rust-client", branch = "api-tweaks" }
axum-macros = "0.3.1"
